aruco_ros2/log/build_2023-08-01_11-40-01/aruco_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/gomi/dev_ws/SRA/aruco_ros2/install/aruco_pkg/lib/python3.10/site-packages/aruco_pkg/tf_broadcast_node.py", line 45
    				self.get_logger().info("Transform lookup succeede: %s", % trans)
    				                                                        ^
SyntaxError: invalid syntax

